Update text to be more concise

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 					<div id="left-box">
 						<h1 class='page-title'>About me</h1>
 						<p>I'm a socially conscious Web developer.</p>
-						<p>Formerly an academic researcher, I'm dedicating my efforts to <b>using science and software for good</b>.</p>
-						<p>I got my start by inserting YouTube videos into pages for UC Berkeley's amphibian informatics database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a> Now I place high value in doing eco-friendly Web development.</p>
-						<p>Professionally, I've worked at <a href='https://envirocenter.yale.edu'>public policy research centers</a> and as an independent consultant. Although a researcher, I had often found myself launching websites for <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns</a> (partering with the <a href="http://palauun.org">United Nations</a> to protect oceans, for example) and I went on to do work for the US government in launching a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on their site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
+						<p>Formerly a researcher, I'm dedicating my efforts to <b>using science and software for good</b>.</p>
+						<p>I unwittingly got my start in doing eco-friendly Web development by integrating YouTube videos into UC Berkeley's amphibian conservation database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a></p>
+						<p>Professionally, I've worked at <a href='https://envirocenter.yale.edu'>public policy research centers</a> and as an independent consultant. Although an analyst on paper, I had often found myself launching websites for <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns</a> (partering with the <a href="http://palauun.org">United Nations</a> to protect oceans, for example) and I went on to do work for the US government in launching a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on their site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
 
-						<p>My claim to fame is that I spearheaded the research of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>. It's now being used by the  <a href="http://visuals.datadriven.yale.edu/waste_map/">research community</a>. The lessons learned were <a href="http://dx.doi.org/10.1016/j.envsci.2015.01.005">published </a>so that others could help take on the task.</p>
+						<p>My claim to fame is that I spearheaded the research of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>. It's now being used by the  <a href="http://visuals.datadriven.yale.edu/waste_map/">environmental community</a>. The lessons learned were <a href="http://dx.doi.org/10.1016/j.envsci.2015.01.005">published </a>so that others could help take on the task.</p>
 
 
 						<div class="parallax"><img id="my-water-map" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"></div>
@@ -53,9 +53,9 @@
 						<p><b>I believe that software, like science, relies on peer sharing networks</b> and makes the most out of our ability to <b>try new things and learn from our mistakes</b>. Good ideas should be open-source. It's critical to making progress for people and the planet.</p>
 
 						<h3>Why me?</h3>
-						<p>I'm especially equipped to <b>help you make impacts on consumers and society while thinking critically about problems.</b></p>
+						<p>I'm specially equipped to <b>help you think critically about problemsn and make impacts on consumers and society.</b></p>
 
-						<p>I work in object-oriented programming and full-stack development. Using JavaScript, Ruby-on-Rails, APIs, with add-on libraries and styling, I can help you create communications platforms that fit your needs.
+						<p>I work in full-stack Web application development. Using object-oriented programming, APIs, and styling, I can help you create communications platforms that fit your needs.
 
 						<h3>What now?</h3>
 						<p>Let's collaborate and start finding solutions!</p>
@@ -72,7 +72,7 @@
 
 							<li class="a-project"><div class="my-square"><img class="thumbnail" src="https://employ-production.s3.amazonaws.com/uploads%2F1483725527107%2Fgithub_critiquehub_screenshot_1.png"><div><a href="https://critiquehub.herokuapp.com"><h4><strong>CritiqueHub (Website)</strong></h4></a><div class="paragraphs">A web application that allows users to register and review the latest movies. User can also leave comments on movie reviews. Tech stack includes Bootstrap CSS, Ruby + Rails, postgreSQL, Open Movie DB API.</p> </div></div><br>Role: Developer</li>
 
-							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/16N5Tf9aX_6lKlUrWoMiNk1Cu4-PtaFPDigWqBbA9xz4/pub?w=531&amp;h=531"><div><a href="https://frozen-depths-21192.herokuapp.com/"><h4><strong>My Energy Mapper</strong></h4></a><div class="paragraphs">Which US state consumes the most total energy? An interactive data explorer lets users interact with US energy data parsed from JSON using jQuery, d3.js.  </div><br>Role: Developer</div></li>
+							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/16N5Tf9aX_6lKlUrWoMiNk1Cu4-PtaFPDigWqBbA9xz4/pub?w=531&amp;h=531"><div><a href="https://frozen-depths-21192.herokuapp.com/"><h4><strong>My Energy Mapper</strong></h4></a><div class="paragraphs">Which US state consumes the most total energy? An interactive data explorer lets users interact with US energy data parsed from JSON using jQuery, d3.js in a Rails environment.</div><br>Role: Developer</div></li>
 
 							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1MCfXlFRKErYpBudlIip58GK0z2WvHdnSai2b0aNGYio/pub?w=531&amp;h=531"><div><a href="http://www.globalchange.gov/browse/indicators"><h4><strong>My Energy Mapper</strong></h4></a><div class="paragraphs">What indicators of climate change could be useful for decision-making? Helped guide launch of this online portal for science communication. </div><br>Role: Research Coordinator</div></li>
 
