Move publications to emph. videos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<p>I'm a socially conscious Web developer.</p>
 						<p>Formerly a researcher, I'm dedicating my efforts to <b>using science and software for good</b>.</p>
 						<p>I unwittingly got my start in doing eco-friendly Web development by integrating YouTube videos into UC Berkeley's amphibian conservation database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a></p>
-						<p>Professionally, I've worked at <a href='https://envirocenter.yale.edu'>public policy research centers</a> and as an independent consultant. Although an analyst on paper, I had often found myself launching websites for <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns</a> (partering with the <a href="http://palauun.org">United Nations</a> to protect oceans, for example) and I went on to do work for the US government in launching a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on their site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
+						<p>Professionally, I've worked at <a href='https://envirocenter.yale.edu'>research centers</a> and as an independent consultant. Although an analyst on paper, I had often found myself launching websites for <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns</a> (partering with the <a href="http://palauun.org">United Nations</a> to protect oceans, for example) and I went on to do work for the US government in launching a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on their site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
 
 						<p>My claim to fame is that I spearheaded the research of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>. It's now being used by the  <a href="http://visuals.datadriven.yale.edu/waste_map/">environmental community</a>. The lessons learned were <a href="http://dx.doi.org/10.1016/j.envsci.2015.01.005">published </a>so that others could help take on the task.</p>
 
@@ -53,9 +53,9 @@
 						<p><b>I believe that software, like science, relies on peer sharing networks</b> and makes the most out of our ability to <b>try new things and learn from our mistakes</b>. Good ideas should be open-source. It's critical to making progress for people and the planet.</p>
 
 						<h3>Why me?</h3>
-						<p>I'm specially equipped to <b>help you think critically about problemsn and make impacts on consumers and society.</b></p>
+						<p>I'm specially equipped to <b>help you think critically about problems and make impacts on consumers and society.</b></p>
 
-						<p>I work in full-stack Web application development. Using object-oriented programming, APIs, and styling, I can help you create communications platforms that fit your needs.
+						<p>I work in full-stack Web application development. Using object-oriented programming with Ruby, JavaScipt, APIs, and styling, I can help you create communications platforms that fit your needs.
 
 						<h3>What now?</h3>
 						<p>Let's collaborate and start finding solutions!</p>
@@ -86,16 +86,16 @@
 
 						<h2>Videos</h2>
 
+						<iframe src="https://player.vimeo.com/video/146032819" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+						<p><a href="https://vimeo.com/146032819">The Climate Organism (CliO): Shifting cultures for a changing climate</a> from <a href="https://vimeo.com/omalik">Omar Malik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
 						<iframe src="https://player.vimeo.com/video/183628186" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 						<p><a href="https://vimeo.com/183628186">UpRouted Promo</a> from <a href="https://vimeo.com/omalik">Omar Malik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 						<iframe src="https://player.vimeo.com/video/152379070" width="640" height="469" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 						<p><a href="https://vimeo.com/152379070">The Frontlines of Fracking (2012)</a></p>
 
-						<iframe src="https://player.vimeo.com/video/146032819" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-						<p><a href="https://vimeo.com/146032819">The Climate Organism (CliO): Shifting cultures for a changing climate</a> from <a href="https://vimeo.com/omalik">Omar Malik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-
-
+						<!--Add in future date >
 						<h2>Writing</h2>
 
 						<p>A historical perspective on fecal sludge reuse. <i>Broken Toilets</i>. 2016. <a href='http://brokentoilets.org/blog/good-waste-historical-perspective-fecal-sludge-reuse/'>http://brokentoilets.org/blog/good-waste-historical-perspective-fecal-sludge-reuse/</a></p>
@@ -108,7 +108,7 @@
 						<p>Where Is the Wastewater Going? How better data can make us more resilient. Union of Concerned Scientists blog. 2014. <a href="http://blog.ucsusa.org/where-is-the-wastewater-going-how-better-data-can-make-us-more-resilient-643">http://blog.ucsusa.org/where-is-the-wastewater-going-how-better-data-can-make-us-more-resilient-643</a>
 
 						<p>Mobilize citizens to track sustianability. <i>Nature</i>. 2014. <a href="http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951">http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951</a>
-
+<!--->
 						<br>
 					</div>
 				</div>
