--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@
 			<td>
 				<div id="canvas">
 					<div id="center-box">
-						<p>Hi, I'm Omar.</p>
+						<p>Hi, I'm Omar. Welcome.</p>
 						<p><img id="my-self-portrait" src="https://docs.google.com/drawings/d/1wDNIK2XjjjZTPUv543Sc5aR7anPf4h_xkaHAnhfBoj8/pub?w=628&h=598"></p>
 					</div>
 					<div id="right-box">
-						<h2>Contact</h2>
+						<h2>Connect</h2>
 						<p>E-mail:<a href="mailto:omar.a.malik@icloud.com"> omar.a.malik@icloud.com</a></p>
 						<p>Github: <a href="https://github.com/omarchaeopteryx">@omarchaeopteryx</a></p>
 						<p>Twitter: <a href="https://twitter.com/sherlock_omz">@sherlock_omz</a></i></p>
 						<p>LinkedIn:<a href="https://linkedin.com/in/omarmalikprofile"> profile</a></p>
+						<p>Vimeo:<a href="https://vimeo.com/omalik"> profile</a></p>
 					</div>
 					<div id="left-box">
-						<h1 class='page-title'>About me</h1>
+						<h1 class='page-title'>My Story</h1>
 						<p>I'm a socially conscious Web developer.</p>
 						<p>Formerly a researcher, I'm dedicating my efforts to <b>using science and software for good</b>.</p>
 						<p>I unwittingly got my start in doing eco-friendly Web development by integrating YouTube videos into UC Berkeley's amphibian conservation database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a></p>
@@ -63,28 +64,35 @@
 					</div>
 
 					<div id="upper-box">
-						<h2>Projects</h2>
+						<h2>Websites</h2>
 						<p>More Soon.</p>
 						<ul id="my-projects">
-							<li class="a-project"><img class="thumbnail" src="https://employ-production.s3.amazonaws.com/uploads%2F1483725121282%2Fgoatogether-new-screenshot1.png"><div><a href="https://goatogether.herokuapp.com"><h4><strong>Goatogether App </strong></h4></a><div class="paragraphs">A Web app that lets users explore their local area and invite friends to go on journeys. Uses Twitter, Google Maps APIs to locate and pin social media posts to maps using dynamic search and data sorting methods.</div><br>Role: Developer</div></li>
-
-							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/11wvsnRv5hjB25ejJhyR4yDyTGCE3MkvXx1KDwjHv__c/pub?w=531&amp;h=531"><div><a href="http://epi.yale.edu"><h4><strong>Environmental Performance Index</strong></h4></a><div class="paragraphs">The Yale EPI provides a global view of the state of the environment with country by country metrics to inform decision-making. A Web portal allows users to explore data for countries. </div><br>Role: Research Analyst</div></li>
-
-							<li class="a-project"><div class="my-square"><img class="thumbnail" src="https://employ-production.s3.amazonaws.com/uploads%2F1483725527107%2Fgithub_critiquehub_screenshot_1.png"><div><a href="https://critiquehub.herokuapp.com"><h4><strong>CritiqueHub (Website)</strong></h4></a><div class="paragraphs">A web application that allows users to register and review the latest movies. User can also leave comments on movie reviews. Tech stack includes Bootstrap CSS, Ruby + Rails, postgreSQL, Open Movie DB API.</p> </div></div><br>Role: Developer</li>
-
-							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/16N5Tf9aX_6lKlUrWoMiNk1Cu4-PtaFPDigWqBbA9xz4/pub?w=531&amp;h=531"><div><a href="https://frozen-depths-21192.herokuapp.com/"><h4><strong>My Energy Mapper</strong></h4></a><div class="paragraphs">Which US state consumes the most total energy? An interactive data explorer lets users interact with US energy data parsed from JSON using jQuery, d3.js in a Rails environment.</div><br>Role: Developer</div></li>
-
-							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1MCfXlFRKErYpBudlIip58GK0z2WvHdnSai2b0aNGYio/pub?w=531&amp;h=531"><div><a href="http://www.globalchange.gov/browse/indicators"><h4><strong>My Energy Mapper</strong></h4></a><div class="paragraphs">What indicators of climate change could be useful for decision-making? Helped guide launch of this online portal for science communication. </div><br>Role: Research Coordinator</div></li>
+							<li class="a-project"><img class="thumbnail" src="https://employ-production.s3.amazonaws.com/uploads%2F1483725121282%2Fgoatogether-new-screenshot1.png"><div><a href="https://goatogether.herokuapp.com"><h4><strong>Goatogether App </strong></h4></a><div class="paragraphs">A Web app that lets users explore their local area and invite friends to go on journeys. Uses Twitter, Google Maps APIs to locate and pin social media posts to maps using dynamic search and data sorting methods.</div><br>Role: Full-Stack Developer</div></li>
 
 
-							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1J1q_M_geXKnTCIGomajJrsTQTs3-55k4x4gVvkuls0Y/pub?w=531&amp;h=531"><div><a href="http:encircl.net"><h4><strong>Encircl.net</strong></h4></a><div class="paragraphs">An environmental storytelling website brining scientists and artists together. Led team of 18+ volunteers in prototyping, launching with CMS, and crafting multimedia content. </div><br>Role: Co-Founder</div></li>
+							<li class="a-project"><div class="my-square"><img class="thumbnail" src="https://employ-production.s3.amazonaws.com/uploads%2F1483725527107%2Fgithub_critiquehub_screenshot_1.png"><div><a href="https://critiquehub.herokuapp.com"><h4><strong>CritiqueHub</strong></h4></a><div class="paragraphs">A site that allows fans and privileged users to review the latest movies and leave comments. The team constructed, tested and deployed the project in three days. Uses Ruby-on-Rails and Open Movie Database API back-end with JavaScript + HTML/CSS Bootstrap front-end.</p> </div></div><br>Role: Front-End Developer</li>
+
+							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/16N5Tf9aX_6lKlUrWoMiNk1Cu4-PtaFPDigWqBbA9xz4/pub?w=531&amp;h=531"><div><a href="https://frozen-depths-21192.herokuapp.com/"><h4><strong>My Energy Mapper</strong></h4></a><div class="paragraphs">Which US state consumes the most total energy? An interactive data explorer lets users interact with US energy data parsed from JSON using jQuery, d3.js in a Rails environment.</div><br>Role: Full-Stack Developer</div></li>
+
+							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1J1q_M_geXKnTCIGomajJrsTQTs3-55k4x4gVvkuls0Y/pub?w=531&amp;h=531"><div><a href="http:encircl.net"><h4><strong>Encircl.net</strong></h4></a><div class="paragraphs">An environmental storytelling website bringing scientists and artists together. Led team of 18+ volunteers in prototyping, launching with CMS, and crafting multimedia content. </div><br>Role: Co-Founder</div></li>
 							</ul>
 					</div>
 
 					<div id="lower-box">
-						<h1>Media</h1>
+						<h1>Science</h1>
 
-						<h2>Videos</h2>
+							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"><div><a href="http://visuals.datadriven.yale.edu/waste_map/"><h4><strong>Wastewater Index</strong></h4></a><div class="paragraphs">A first-of-its-kind baseline measurement of the state of water pollution from poor wastewater treatment around the world. Uses empirical findings from original data sources and collated IGO data to present metrics for 180+ countries.</div><br>Role: Research Team Lead</div></li>
+
+							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/11wvsnRv5hjB25ejJhyR4yDyTGCE3MkvXx1KDwjHv__c/pub?w=531&amp;h=531"><div><a href="http://epi.yale.edu"><h4><strong>Environmental Performance Index</strong></h4></a><div class="paragraphs">The Yale EPI provides a global view of the state of the environment with country by country metrics to inform decision-making. A Web portal allows users to explore the data. </div><br>Role: Researcher</div></li>
+
+							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1MCfXlFRKErYpBudlIip58GK0z2WvHdnSai2b0aNGYio/pub?w=531&amp;h=531"><div><a href="http://www.globalchange.gov/browse/indicators"><h4><strong>US Climate Indicators</strong></h4></a><div class="paragraphs">What indicators of climate change could be useful for decision-making? Helped guide launch of this online portal for science communication. </div><br>Role: Researcher </div></li>
+
+							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1GTr15qNU_lk9qTclKHFy0NiShBm-RbujVl2TymhS-ek/pub?w=600&amp;h=531"><div><a href="http://supply-change.org/"><h4><strong>Supply Change.org</strong></h4></a><div class="paragraphs">Gathered data to support the world's first freely available data aggregation platform that tracks corporate commitments toward eliminating deforestation. Researched global supply chains for sustainability metrics and identified data gaps.</div><br>Role: Consultant </div></li>
+
+							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1uqfZBWWKaS4h0OVKjCsHlJ1i4rLcRXald-V9LpJaMIQ/pub?w=927&amp;h=649"><div><a href="http://www.guerrillacartography.org"><h4><strong>Water: An Atlas</strong></h4></a><div class="paragraphs">What have science fiction authors proposed to battle California’s drought? Identified relevant ideas and worked with cartographer to produce prototype for a novel map.</div><br>Role: Volunteer </div></li>
+
+
+						<!-- <h2>Videos</h2>
 
 						<iframe src="https://player.vimeo.com/video/146032819" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 						<p><a href="https://vimeo.com/146032819">The Climate Organism (CliO): Shifting cultures for a changing climate</a> from <a href="https://vimeo.com/omalik">Omar Malik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
@@ -93,7 +101,7 @@
 						<p><a href="https://vimeo.com/183628186">UpRouted Promo</a> from <a href="https://vimeo.com/omalik">Omar Malik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 						<iframe src="https://player.vimeo.com/video/152379070" width="640" height="469" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-						<p><a href="https://vimeo.com/152379070">The Frontlines of Fracking (2012)</a></p>
+						<p><a href="https://vimeo.com/152379070">The Frontlines of Fracking (2012)</a></p> -->
 
 						<!--Add in future date >
 						<h2>Writing</h2>
