--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<td>
 				<div id="canvas">
 					<div id="center-box">
-						<p>Hi, I'm Omar. Welcome.</p>
+						<p>I'm Omar. Welcome!</p>
 						<p><img id="my-self-portrait" src="https://docs.google.com/drawings/d/1wDNIK2XjjjZTPUv543Sc5aR7anPf4h_xkaHAnhfBoj8/pub?w=628&h=598"></p>
 					</div>
 					<div id="right-box">
@@ -40,23 +40,18 @@
 					</div>
 					<div id="left-box">
 						<h1 class='page-title'>My Story</h1>
-						<p>I'm a socially conscious Web developer.</p>
-						<p>Formerly a researcher, I'm dedicating my efforts to <b>using science and software for good</b>.</p>
-						<p>I unwittingly got my start in doing eco-friendly Web development by integrating YouTube videos into UC Berkeley's amphibian conservation database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a></p>
-						<p>Professionally, I've worked at <a href='https://envirocenter.yale.edu'>research centers</a> and as an independent consultant. Although an analyst on paper, I had often found myself launching websites for <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns</a> (partering with the <a href="http://palauun.org">United Nations</a> to protect oceans, for example) and I went on to do work for the US government in launching a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on their site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
-
-						<p>My claim to fame is that I spearheaded the research of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>. It's now being used by the  <a href="http://visuals.datadriven.yale.edu/waste_map/">environmental community</a>. The lessons learned were <a href="http://dx.doi.org/10.1016/j.envsci.2015.01.005">published </a>so that others could help take on the task.</p>
-
-
+						<p>I'm a data-driven developer.</p>
+						<p>Formerly an academic researcher, I'm now <b>combining science and software to solve problems</b>.</p>
+						<p>I unwittingly got my start in doing green Web development by integrating YouTube videos into Berkeley's amphibian conservation database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a> I have since become known for my research on <a href="http://epi.yale.edu/chapter/water-resources">global water quality</a>.
 						<div class="parallax"><img id="my-water-map" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"></div>
 						<br>
 
-						<p><b>I believe that software, like science, relies on peer sharing networks</b> and makes the most out of our ability to <b>try new things and learn from our mistakes</b>. Good ideas should be open-source. It's critical to making progress for people and the planet.</p>
+						<p><b>I believe that software, like science, relies on peer sharing networks</b> and makes the most out of the ability to <b>try new things and learn from our experience</b>. Good ideas should be open-source. It's critical to making progress for people and the planet.</p>
 
 						<h3>Why me?</h3>
-						<p>I'm specially equipped to <b>help you think critically about problems and make impacts on consumers and society.</b></p>
+						<p>I'm specially equipped to <b>help you think critically about problems and make big impacts on consumers and society.</b></p>
 
-						<p>I work in full-stack Web application development. Using object-oriented programming with Ruby, JavaScipt, APIs, and styling, I can help you create communications platforms that fit your needs.
+						<p>I work in full-stack Web application development. Using best object-oriented programming practices with Ruby, JavaScipt, APIs, and styling, I can help you create communications platforms that fit your needs.
 
 						<h3>What now?</h3>
 						<p>Let's collaborate and start finding solutions!</p>
@@ -64,8 +59,7 @@
 					</div>
 
 					<div id="upper-box">
-						<h2>Websites</h2>
-						<p>More Soon.</p>
+						<h1>Websites</h1>
 						<ul id="my-projects">
 							<li class="a-project"><img class="thumbnail" src="https://employ-production.s3.amazonaws.com/uploads%2F1483725121282%2Fgoatogether-new-screenshot1.png"><div><a href="https://goatogether.herokuapp.com"><h4><strong>Goatogether App </strong></h4></a><div class="paragraphs">A Web app that lets users explore their local area and invite friends to go on journeys. Uses Twitter, Google Maps APIs to locate and pin social media posts to maps using dynamic search and data sorting methods.</div><br>Role: Full-Stack Developer</div></li>
 
