--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 					</div>
 					<div id="left-box">
 						<h1 class='page-title'>My Story</h1>
-						<p>I'm a data-driven developer.</p>
-						<p>Formerly an academic researcher, I'm now <b>combining science and software to solve problems</b>.</p>
-						<p>I unwittingly got my start in doing green Web development by integrating YouTube videos into Berkeley's amphibian conservation database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a> I have since become known for my research on <a href="http://epi.yale.edu/chapter/water-resources">global water quality</a>.
+						<p>I'm a Web developer.</p>
+						<p>Formerly a researcher in academia, I <b>combine science and software to solve problems</b>.</p>
+						<p>I unwittingly got my start in doing green Web development by integrating YouTube videos into UC Berkeley's amphibian conservation platform, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a> I have since become known for my research on <a href="http://epi.yale.edu/chapter/water-resources">global water quality</a>.
 						<div class="parallax"><img id="my-water-map" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"></div>
 						<br>
 
-						<p><b>I believe that software, like science, relies on peer sharing networks</b> and makes the most out of the ability to <b>try new things and learn from our experience</b>. Good ideas should be open-source. It's critical to making progress for people and the planet.</p>
+						<p><b>I believe that software, like science, relies on peer sharing networks</b> and makes the most out of the ability to <b>try new things and learn from our experience</b>. Good ideas should be open-source.</p>
 
 						<h3>Why me?</h3>
 						<p>I'm specially equipped to <b>help you think critically about problems and make big impacts on consumers and society.</b></p>
@@ -54,7 +54,7 @@
 						<p>I work in full-stack Web application development. Using best object-oriented programming practices with Ruby, JavaScipt, APIs, and styling, I can help you create communications platforms that fit your needs.
 
 						<h3>What now?</h3>
-						<p>Let's collaborate and start finding solutions!</p>
+						<p>Let's collaborate and find solutions!</p>
 						<h4><a id="link-contact" href="#get-in-touch">Contact</a></h4>
 					</div>
 
