--- a/index.html
+++ b/index.html
@@ -36,17 +36,16 @@
 						<p>Github: <a href="https://github.com/omarchaeopteryx">@omarchaeopteryx</a></p>
 						<p>Twitter: <a href="https://twitter.com/sherlock_omz">@sherlock_omz</a></i></p>
 						<p>LinkedIn:<a href="https://linkedin.com/in/omarmalikprofile"> profile</a></p>
-						<p>Vimeo:<a href="https://vimeo.com/omalik"> profile</a></p>
 					</div>
 					<div id="left-box">
 						<h1 class='page-title'>My Story</h1>
 						<p>I'm a Web developer.</p>
-						<p>Formerly a researcher in academia, I <b>combine science and software to solve problems</b>.</p>
-						<p>I unwittingly got my start in doing green Web development by integrating YouTube videos into UC Berkeley's amphibian conservation platform, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a> I have since become known for my research on <a href="http://epi.yale.edu/chapter/water-resources">global water quality</a>.
+						<p>With a background non-profits and academic a research, I <b>use science and software in finding solutions</b>.</p>
+						<p>I unwittingly got my start in doing eco-friendly Web development when integrating YouTube videos into UC Berkeley's amphibian conservation database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a> I have since become known for my research on <a href="http://epi.yale.edu/chapter/water-resources">water quality</a>.
 						<div class="parallax"><img id="my-water-map" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"></div>
 						<br>
 
-						<p><b>I believe that software, like science, relies on peer sharing networks</b> and makes the most out of the ability to <b>try new things and learn from our experience</b>. Good ideas should be open-source.</p>
+						<p><b>I believe that software, like science, relies on peer sharing networks</b> and makes the most out of the ability to <b>learn from new things</b>. Good ideas are open-source.</p>
 
 						<h3>Why me?</h3>
 						<p>I'm specially equipped to <b>help you think critically about problems and make big impacts on consumers and society.</b></p>
