Update background image

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 	<main>
-		<img id="bottom" src="github-mypage-1.svg" alt="A river as a background image">
-		<img id="top" src="github-mypage-2.svg" alt="A leaf as a background image">
+		<!-- <img id="bottom" src="github-mypage-1.svg" alt="A river as a background image">
+		<img id="top" src="github-mypage-2.svg" alt="A leaf as a background image"> -->
 		<table>
 			<th></th>
 			<th></th>
