--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
 					</div>
 					<div id="left-box">
 						<h1 class='page-title'>My Story</h1>
-						<p>I'm a Web developer.</p>
-						<p>With a background non-profits and academic a research, I <b>use science and software in finding solutions</b>.</p>
-						<p>I unwittingly got my start in doing eco-friendly Web development when integrating YouTube videos into UC Berkeley's amphibian conservation database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a> I have since become known for my research on <a href="http://epi.yale.edu/chapter/water-resources">water quality</a>.
+						<p>I'm a Web application developer.</p>
+						<p>With a background non-profits and academic a research, I <b>use science and software to creatively solve problems.</b>.</p>
+						<p>I unwittingly got my start in doing eco-friendly Web development when integrating YouTube videos into UC Berkeley's amphibian conservation database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a> I have since become heavily involved in research on <a href="http://epi.yale.edu/chapter/water-resources">water quality</a>.
 						<div class="parallax"><img id="my-water-map" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"></div>
 						<br>
 
-						<p><b>I believe that software, like science, relies on peer sharing networks</b> and makes the most out of the ability to <b>learn from new things</b>. Good ideas are open-source.</p>
+						<p><b>I believe that software, like science, relies on peer sharing networks</b> and makes the most out of the ability to <b>try new things and learn from mistakes</b>. Good ideas are open-source.</p>
 
 						<h3>Why me?</h3>
 						<p>I'm specially equipped to <b>help you think critically about problems and make big impacts on consumers and society.</b></p>
 
-						<p>I work in full-stack Web application development. Using best object-oriented programming practices with Ruby, JavaScipt, APIs, and styling, I can help you create communications platforms that fit your needs.
+						<p>I work in full-stack Web development. Using object-oriented programming best practices with Ruby, JavaScipt, APIs, and styling, I can help you create communications platforms that fit your needs.
 
 						<h3>What now?</h3>
 						<p>Let's collaborate and find solutions!</p>
