Minor content change

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					</div>
 
 					<div id="lower-box">
-						<h1>Science</h1>
+						<h1>Research</h1>
 
 							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"><div><a href="http://visuals.datadriven.yale.edu/waste_map/"><h4><strong>Wastewater Index</strong></h4></a><div class="paragraphs">A first-of-its-kind measurement of water pollution from wastewater treatment around the world. Uses empirical findings from original data sources and inter-governmental data to present metrics for 180+ countries.</div><br>Role: Research Team Lead</div></li>
 
