Add fade-in and fade-out to 'my story' text upon scroll'

--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
 					</div>
 					<div id="left-box">
 						<h1 class='page-title'>My Story</h1>
-						<p>I'm a Web application developer.</p>
-						<p>With a background non-profits and academic a research, I <b>use science and software to creatively solve problems.</b>.</p>
-						<p>I unwittingly got my start in doing eco-friendly Web development when integrating YouTube videos into UC Berkeley's amphibian conservation database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a> I have since become heavily involved in research on <a href="http://epi.yale.edu/chapter/water-resources">water quality</a>.
+						<p class='story-text'>I'm a Web application developer.</p>
+						<p class='story-text'>With a background non-profits and academic a research, I <b>use science and software to creatively solve problems.</b>.</p>
+						<p class='story-text'>I unwittingly got my start in doing eco-friendly Web development when integrating YouTube videos into UC Berkeley's amphibian conservation database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a> I have since become heavily involved in research on <a href="http://epi.yale.edu/chapter/water-resources">water quality</a>.
 						<div class="parallax"><img id="my-water-map" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"></div>
 						<br>
 
-						<p><b>I believe that software, like science, relies on peer sharing networks</b> and makes the most out of the ability to <b>try new things and learn from mistakes</b>. Good ideas are open-source.</p>
+						<p class = 'story-text'><b>I believe that software, like science, relies on peer sharing networks</b> and makes the most out of the ability to <b>try new things and learn from mistakes</b>. Good ideas are open-source.</p>
 
-						<h3>Why me?</h3>
-						<p>I'm specially equipped to <b>help you think critically about problems and make big impacts on consumers and society.</b></p>
+						<h3 class='story-text'>Why me?</h3>
+						<p class = 'story-text'>I'm specially equipped to <b>help you think critically about problems and make big impacts on consumers and society.</b></p>
 
-						<p>I work in full-stack Web development. Using object-oriented programming best practices with Ruby, JavaScipt, APIs, and styling, I can help you create communications platforms that fit your needs.
+						<p class='story-text'>I work in full-stack Web development. Using object-oriented programming best practices with Ruby, JavaScipt, APIs, and styling, I can help you create communications platforms that fit your needs.
 
-						<h3>What now?</h3>
-						<p>Let's collaborate and find solutions!</p>
-						<h4><a id="link-contact" href="#get-in-touch">Contact</a></h4>
+						<h3 class='story-text'>What now?</h3>
+						<p class='story-text'>Let's collaborate and find solutions!</p>
+						<h4 class='story-text'><a id="link-contact" href="#get-in-touch">Contact</a></h4>
 					</div>
 
 					<div id="upper-box">
