Change font styling

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					</div>
 					<div id="left-box">
 						<h1 class='page-title'>My Story</h1>
-						<p class='story-text'>I'm a Web application developer.</p>
+						<p class='story-text'>I'm a budding WebApp developer.</p>
 						<p class='story-text'>With a background non-profits and academic a research, I <b>use science and software to creatively solve problems.</b>.</p>
 						<p class='story-text'>I unwittingly got my start in doing eco-friendly Web development when integrating YouTube videos into UC Berkeley's amphibian conservation database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a> I have since become heavily involved in research on <a href="http://epi.yale.edu/chapter/water-resources">water quality</a>.
 						<div class="parallax"><img id="my-water-map" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"></div>
