Add new project description for DoWhop.com

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 					<div id="upper-box">
 						<h1>Websites</h1>
 						<ul id="my-projects">
+							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1lrZ7vGGXalN2at4IQEOSvC8hkwWq8ulvsOUnQjbNcQs/pub?w=398&h=392"><div><a href="https://dowhop-webchat.firebaseapp.com/"><h4><strong>DoWhop WebChat</strong></h4></a><div class="paragraphs">A real-time multi-channel chat application for a person-to-person sharing economy website (DoWhop.com). Tech is Firebase SDK (NoSQL), Google Maps API, HTML/CSS, JavaScript, jQuery</div><br>Role: Web Development Intern (full stack)</div></li>
+
 							<li class="a-project"><img class="thumbnail" src="https://employ-production.s3.amazonaws.com/uploads%2F1483725121282%2Fgoatogether-new-screenshot1.png"><div><a href="https://goatogether.herokuapp.com"><h4><strong>Goatogether App </strong></h4></a><div class="paragraphs">A Web app that lets users explore their local area and invite friends to go on journeys. Uses Twitter, Google Maps APIs to locate and pin social media posts to maps using dynamic search and data sorting methods.</div><br>Role: Full-Stack Developer</div></li>
 
 
@@ -69,7 +71,7 @@
 
 							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1XigH5uqGu8RKXpnfc3jedocpLjfBzHNVXLdaoL7rtyQ/pub?w=531&amp;h=531"><div><a href="http://palauun.org"><h4><strong>PalauUN.org</strong></h4></a><div class="paragraphs">A web presence for the Mission of Palau to the United Nations. I managed and populated content, integrating timely multimedia such as PDFs and videos. Launched in WordPess CMS back-end with HTML/CSS customization.</div><br>Role: Webmaster</div></li></li>
 
-							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1J1q_M_geXKnTCIGomajJrsTQTs3-55k4x4gVvkuls0Y/pub?w=531&amp;h=531"><div><a href="http:encircl.net"><h4><strong>Encircl.net</strong></h4></a><div class="paragraphs">An environmental storytelling website bringing scientists and artists together. Led team of 18+ volunteers in prototyping, launching with CMS, and crafting multimedia content. </div><br>Role: Co-Founder</div></li>
+							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1J1q_M_geXKnTCIGomajJrsTQTs3-55k4x4gVvkuls0Y/pub?w=531&amp;h=531"><div><a href="http://encircl.net"><h4><strong>Encircl.net</strong></h4></a><div class="paragraphs">An environmental storytelling website bringing scientists and artists together. Led team of 18+ volunteers in prototyping, launching with CMS, and crafting multimedia content. </div><br>Role: Co-Founder</div></li>
 							</ul>
 					</div>
 
