Add links information

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                       <a href="https://www.climatecolab.org/contests/2012/shifting-cultures-for-a-changing-climate/c/proposal/1304121" target="_blank"> Read more.
                     <!-- <img src="https://docs.google.com/drawings/d/1WjB_T7rMqDSx1BWgfjJwIQmojOX6vvsBPpdREdtQt4c/pub?w=1393&h=784"> -->
                     </p>
-                    <a class="btn btn-default page-scroll" href="#story-indicators">Scroll Down!</a>
+                    <a class="btn btn-default page-scroll" href="#story-indicators">Click to Continue</a>
                 </div>
             </div>
         </div>
@@ -164,7 +164,7 @@
                       <!-- <img src="https://docs.google.com/drawings/d/1k4quDLV16xU2ozM2HdMOhzWLdthrzvzikwFmBQdklkw/pub?w=400&h=200"> -->
                     </p>
 
-                    <a class="btn btn-default page-scroll" href="#story-webapps">Scroll Down!</a>
+                    <a class="btn btn-default page-scroll" href="#story-webapps">Click to Continue</a>
                 </div>
             </div>
         </div>
@@ -184,7 +184,7 @@
                      <!-- <img src="https://docs.google.com/drawings/d/1lrZ7vGGXalN2at4IQEOSvC8hkwWq8ulvsOUnQjbNcQs/pub?w=350&h=340"> -->
                    </p>
 
-                   <a class="btn btn-default page-scroll" href="#links">Scroll Down!</a>
+                   <a class="btn btn-default page-scroll" href="#links">Click to Continue</a>
                </div>
            </div>
        </div>
@@ -200,6 +200,43 @@
                      <i class="material-icons">share</i>
                    </p>
                    <p>
+                     <!-- Portfolio pieces shall go here-->
+                   <ul class="link-items">
+                     <li class="link">
+                       <a href="https://dowhop-webchat.firebaseapp.com/" target="_blank">DoWhop.com WebChat
+                         <!-- <img class="thumbnail" src="https://docs.google.com/drawings/d/1lrZ7vGGXalN2at4IQEOSvC8hkwWq8ulvsOUnQjbNcQs/pub?w=398&h=392"> -->
+                       </a>
+                       <div class="paragraphs">A real-time multi-channel chat application for a person-to-person sharing economy website (DoWhop.com). Tech is Firebase SDK (NoSQL), Google Maps API, HTML/CSS, JavaScript, jQuery
+                       <!-- </div> -->
+                     </li>
+
+                     <li class="link">
+                       <a href="https://critiquehub.herokuapp.com" target="_blank">CritiqueHub Website
+                         <!-- <img class="thumbnail" src="https://employ-production.s3.amazonaws.com/uploads%2F1483725121282%2Fgoatogether-new-screenshot1.png"> -->
+                       </a>
+                        <div class="paragraphs">
+                          A site that allows fans and privileged users to review the latest movies and leave comments. The team constructed, tested and deployed the project in three days. Uses Ruby-on-Rails and Open Movie Database API back-end with JavaScript + HTML/CSS Bootstrap front-end.
+                        </div>
+                      </li>
+
+                     <li class="link">
+                       <a href="https://goatogether.herokuapp.com" target="_blank">GoTogether Web App
+                         <!-- <img class="thumbnail" src="https://employ-production.s3.amazonaws.com/uploads%2F1483725121282%2Fgoatogether-new-screenshot1.png"> -->
+                       </a>
+                       <div class="paragraphs">
+                         A Web app that lets users explore their local area and invite friends to go on journeys. Uses Twitter, Google Maps APIs to locate and pin social media posts to maps using dynamic search and data sorting methods.
+                       </div>
+                     </li>
+
+                     <li class="link">
+                       <div class="paragraphs">
+                         Coming soon.
+                       </div>
+                     </li>
+
+
+                   </ul>
+
                      <!-- <ul id="my-projects">
          							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1lrZ7vGGXalN2at4IQEOSvC8hkwWq8ulvsOUnQjbNcQs/pub?w=398&h=392"><div><a href="https://dowhop-webchat.firebaseapp.com/"><h4><strong>DoWhop WebChat</strong></h4></a><div class="paragraphs">A real-time multi-channel chat application for a person-to-person sharing economy website (DoWhop.com). Tech is Firebase SDK (NoSQL), Google Maps API, HTML/CSS, JavaScript, jQuery</div><br>Role: Web Development Intern (full stack)</div></li>
 
@@ -227,7 +264,7 @@
                       <li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1uqfZBWWKaS4h0OVKjCsHlJ1i4rLcRXald-V9LpJaMIQ/pub?w=927&amp;h=649"><div><a href="http://www.guerrillacartography.org"><h4><strong>Water: An Atlas</strong></h4></a><div class="paragraphs">What have science fiction authors proposed to battle California's drought? Identified relevant ideas and worked with cartographer to produce prototype for a novel map.</div><br>Role: Volunteer </div></li> -->
 
                    </p>
-                   <a class="btn btn-default page-scroll" href="#contact">Scroll Down!</a>
+                   <a class="btn btn-default page-scroll" href="#contact">Click to Continue</a>
                </div>
            </div>
        </div>
@@ -247,7 +284,7 @@
                     <p><a href="https://github.com/omaerchaeopteryx" target="_blank">GitHub</a></p>
                     <p><a href="https://linkedin.com/in/omarmalikprofile" target="_blank">LinkedIn</a></p>
                     <p><a href="https://docs.google.com/document/d/1xE8EFCLc5q1lbcNkFdxUYoq976slrp6hR_HQZIMVxoY/pub" target="_blank">Resume</a></p>
-                    <a class="btn btn-default page-scroll" href="#intro" target="_blank">Click to Return!</a>
+                    <a class="btn btn-default page-scroll" href="#intro" target="_blank">Click to Return</a>
                 </div>
             </div>
         </div>
