Style links, contact, intro page a bit

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="col-lg-12">
                     <h1>Web developer +</h1>
                     <h1>Science communicator</h1>
-                    <a class="btn btn-default page-scroll" href="#about">Click to Continue</a>
+                    <a id='intro-button' class="btn btn-default page-scroll" href="#about">Click to Continue</a>
                 </div>
             </div>
         </div>
@@ -108,7 +108,7 @@
         <div class="container">
             <div class="row">
                 <div id="story-UN-main" class="col-lg-12">
-                    <h1>Supporting communications at the UN</h1>
+                    <h1>Supporting UN Communications</h1>
                     <p>
                       <i class="material-icons">wb_incandescent</i>
                     </p>
@@ -155,7 +155,7 @@
          <!-- </video> -->
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Supporting Federal science</h1>
+                    <h1>Supporting Federal Science</h1>
                     <p>
                       <i class="material-icons">create</i>
                     </p>
@@ -230,11 +230,10 @@
 
                      <li class="link">
                        <div class="paragraphs">
-                         Coming soon.
+                         More coming soon.
                        </div>
                      </li>
-
-
+                    <!-- End of Visible Projects -->
                    </ul>
 
                      <!-- <ul id="my-projects">
