--- a/index.html
+++ b/index.html
@@ -195,19 +195,14 @@
        <div class="container">
            <div class="row">
                <div class="col-lg-12">
-                   <h1>Links</h1>
-                   <p>
-                     <i class="material-icons">share</i>
-                   </p>
-                   <p>
+                   <h6>Links</h6> <!--<i class="material-icons icon-link">share</i>-->
                      <!-- Portfolio pieces shall go here-->
                    <ul class="link-items">
                      <li class="link">
-                       <a href="https://dowhop-webchat.firebaseapp.com/" target="_blank">DoWhop.com WebChat
+                       <a href="https://dowhop-lifecycle.firebaseapp.com/" target="_blank">DoWhop.com WebChat
                          <!-- <img class="thumbnail" src="https://docs.google.com/drawings/d/1lrZ7vGGXalN2at4IQEOSvC8hkwWq8ulvsOUnQjbNcQs/pub?w=398&h=392"> -->
                        </a>
-                       <div class="paragraphs">A real-time multi-channel chat application for a person-to-person sharing economy website (DoWhop.com). Tech is Firebase SDK (NoSQL), Google Maps API, HTML/CSS, JavaScript, jQuery
-                       <!-- </div> -->
+                       <div class="paragraphs">A real-time multi-channel chat application for a person-to-person sharing economy website (DoWhop.com). Tech is Firebase SDK (NoSQL), Google Maps API, HTML/CSS, JavaScript, jQuery, React.
                      </li>
 
                      <li class="link">
@@ -215,7 +210,7 @@
                          <!-- <img class="thumbnail" src="https://employ-production.s3.amazonaws.com/uploads%2F1483725121282%2Fgoatogether-new-screenshot1.png"> -->
                        </a>
                         <div class="paragraphs">
-                          A site that allows fans and privileged users to review the latest movies and leave comments. The team constructed, tested and deployed the project in three days. Uses Ruby-on-Rails and Open Movie Database API back-end with JavaScript + HTML/CSS Bootstrap front-end.
+                          A site that allows reviewers and fans to review the latest movies. The team constructed, tested and deployed the project in three days. Uses Ruby-on-Rails, Open Movie Database API with JavaScript + HTML/CSS + Bootstrap on front.
                         </div>
                       </li>
 
@@ -229,13 +224,29 @@
                      </li>
 
                      <li class="link">
-                       <div class="paragraphs">
-                         More coming soon.
+                       <a href="https://civic-social.herokuapp.com/" target="_blank">Civic-Social Web App
+                         <!-- <img class="thumbnail" src="https://docs.google.com/drawings/d/1lrZ7vGGXalN2at4IQEOSvC8hkwWq8ulvsOUnQjbNcQs/pub?w=398&h=392"> -->
+                       </a>
+                       <div class="paragraphs">A website for learning about politics in a user-friendly way. Built with Ruby-on-Rails leveraging the ProPublica and Twitter APIs for up-to-date information.
+                     </li>
+
+                     <li class="link">
+                       <a href="http:palauun.org/" target="_blank">PalauUN.org
+                         <!-- <img class="thumbnail" src="https://docs.google.com/drawings/d/1lrZ7vGGXalN2at4IQEOSvC8hkwWq8ulvsOUnQjbNcQs/pub?w=398&h=392"> -->
+                       </a>
+                       <div class="paragraphs">A custom website launched for the mission of Palau at the United Nations. Former Webmaster.
+                     </li>
+
+                     <li class="a-project">
+                       <div>
+                         <a href="http://encircl.net">Encircl.net
+                       </a>
+                       <div class="paragraphs">An environmental storytelling website bringing scientists and artists together. Led team of 18+ volunteers in prototyping, launching with CMS, and crafting multimedia content.
                        </div>
+                       <!-- <img class="thumbnail" src="https://docs.google.com/drawings/d/1J1q_M_geXKnTCIGomajJrsTQTs3-55k4x4gVvkuls0Y/pub?w=531&amp;h=531"> -->
                      </li>
                     <!-- End of Visible Projects -->
                    </ul>
-
                      <!-- <ul id="my-projects">
          							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1lrZ7vGGXalN2at4IQEOSvC8hkwWq8ulvsOUnQjbNcQs/pub?w=398&h=392"><div><a href="https://dowhop-webchat.firebaseapp.com/"><h4><strong>DoWhop WebChat</strong></h4></a><div class="paragraphs">A real-time multi-channel chat application for a person-to-person sharing economy website (DoWhop.com). Tech is Firebase SDK (NoSQL), Google Maps API, HTML/CSS, JavaScript, jQuery</div><br>Role: Web Development Intern (full stack)</div></li>
 
@@ -261,8 +272,6 @@
                       <li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1GTr15qNU_lk9qTclKHFy0NiShBm-RbujVl2TymhS-ek/pub?w=600&amp;h=531"><div><a href="http://supply-change.org/"><h4><strong>Supply Change.org</strong></h4></a><div class="paragraphs">The world's first open data aggregation platform that tracks corporate commitments to eliminating deforestation. Researched international supply chains to find global sustainability metrics.</div><br>Role: Consultant </div></li>
 
                       <li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1uqfZBWWKaS4h0OVKjCsHlJ1i4rLcRXald-V9LpJaMIQ/pub?w=927&amp;h=649"><div><a href="http://www.guerrillacartography.org"><h4><strong>Water: An Atlas</strong></h4></a><div class="paragraphs">What have science fiction authors proposed to battle California's drought? Identified relevant ideas and worked with cartographer to produce prototype for a novel map.</div><br>Role: Volunteer </div></li> -->
-
-                   </p>
                    <a class="btn btn-default page-scroll" href="#contact">Click to Continue</a>
                </div>
            </div>
