Update with new placeholder style

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Omar Codex</title>
-  <h1>Coming Soon.</h1>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.1/css/bulma.css" rel="stylesheet"></link>
 </head>
 <body>
-
+  <title></title>
+  <section class="section">
+      <div class="container">
+        <h1 class="title">
+          <a href="https://github.com/omarcodex">@OmarCodex</a>
+        </h1>
+        <p class="subtitle">
+        New website coming soon.
+        <a href="mailto:omar.a.malik@icloud.com">omar.a.malik@icloud.com</a> | <a href="https:linkedin.com/in/omarmalikprofile">LinkedIn</a>
+        </p>
+      </div>
+    </section>
 </body>
 </html>
