Fix cover photo placing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a href="https://github.com/omarcodex">@OmarCodex</a>
         </h1>
         <p class="subtitle">
-        New website coming soon.
+        New website coming soon.<br>
         <a href="mailto:omar.a.malik@icloud.com">omar.a.malik@icloud.com</a> | <a href="https:linkedin.com/in/omarmalikprofile">LinkedIn</a>
         </p>
       </div>
